Adding the Particles example for people who want to make Lua extensions

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,3 +1,4 @@
 project("Hello World CPP")
 message(STATUS "Building PDCPP Base Examples")
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/hello_world)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/particles)
