Link pdcpp automatically
Simplify optimization flag setup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,8 @@ if (TOOLCHAIN STREQUAL "armgcc")
 
     target_compile_definitions(playdate_sdk PUBLIC TARGET_PLAYDATE=1)
     target_compile_options(playdate_sdk PUBLIC -Wall -Wno-unknown-pragmas -Wdouble-promotion)
-    target_compile_options(playdate_sdk PUBLIC $<$<CONFIG:DEBUG>:-O2>)
+    target_compile_options(playdate_sdk PRIVATE $<$<CONFIG:DEBUG>:-O2>)
+    target_compile_options(playdate_sdk INTERFACE $<$<CONFIG:DEBUG>:-O0>)
     target_compile_options(playdate_sdk PUBLIC $<$<CONFIG:RELEASE>:-O3>)
 
     target_compile_options(playdate_sdk PUBLIC ${MCFLAGS})
