--- a/examples/particles/CMakeLists.txt
+++ b/examples/particles/CMakeLists.txt
@@ -60,8 +60,5 @@ set(CMAKE_XCODE_GENERATE_SCHEME TRUE)
 # Now we can declare our application
 add_playdate_application(Particles)
 
-# Add its sources
+# Add its sources, and you're good to go!
 target_sources(Particles PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)
-
-# Link against the pdcpp_core library, and you're good to go!
-target_link_libraries(Particles pdcpp_core)
